order-service/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /orders
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service-svc
                port:
                  number: 8082
